--- a/database/prisma.yml
+++ b/database/prisma.yml
@@ -9,3 +9,7 @@ datamodel: datamodel.graphql
 
 # You can only access the API when providing JWTs that are signed with this secret
 secret: mysecret123
+
+hooks:
+  post-deploy:
+    - graphql get-schema --project database
